#167270462 update signup request body to snake_case (#53)
* bug(signup): update signup request body to snake_case

- add snake case to singup route
- add test to cover this endpoint

[Delivers #167270462]
